objects/TEACstmrProfile__BU_Customer_Plan__c.object
<CustomObject>
    <description>Industry or Business Unit Overview for &quot;A&quot; Customers</description>
    <fields>
        <fullName>TEACstmrProfile__Approval_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Process</fullName>
                    <default>true</default>
                    <label>In Process</label>
                </value>
                <value>
                    <fullName>Ready for Executive Dashboard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aerospace, Defense &amp; Marine</fullName>
                </value>
                <value>
                    <fullName>Appliances</fullName>
                </value>
                <value>
                    <fullName>Application Tooling</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Circuit Protection</fullName>
                </value>
                <value>
                    <fullName>Consumer Devices</fullName>
                </value>
                <value>
                    <fullName>Data Communications</fullName>
                </value>
                <value>
                    <fullName>Distribution Channel</fullName>
                </value>
                <value>
                    <fullName>Energy</fullName>
                </value>
                <value>
                    <fullName>Enterprise Networks</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Telecom Networks</fullName>
                </value>
                <value>
                    <fullName>Touch Solutions</fullName>
                </value>
                <value>
                    <fullName>Wireless</fullName>
                </value>
                <value>
                    <fullName>Demo Chip to Board</fullName>
                </value>
                <value>
                    <fullName>Demo SmarTran Networks</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Competitor_Information__c</fullName>
        <label>Competitor Information</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Content_Owner__c</fullName>
        <description>Name of person who &quot;owns&quot; the content</description>
        <inlineHelpText>Name of person who &quot;owns&quot; the content</inlineHelpText>
        <label>Content Owner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Disappointments_Challenges__c</fullName>
        <label>Disappointments/Challenges</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Editor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Editor who will approve the A Customer Profiles for this Business Unit</description>
        <inlineHelpText>Editor who will approve the A Customer Profiles for this Business Unit</inlineHelpText>
        <label>Editor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Industry_BU_Overviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Forecast_Assumptions__c</fullName>
        <label>Forecast Outlook</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Industry_Summary__c</fullName>
        <label>Prior Quarter Actual Summary</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Market_Trends__c</fullName>
        <label>Market Summary</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Momentum__c</fullName>
        <label>Momentum</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Plan_Year__c</fullName>
        <label>Plan Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Unique_BU_Year__c</fullName>
        <description>worker field to enforce uniqueness</description>
        <label>Unique BU Year</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Industry/BU Overview</label>
    <listViews>
        <fullName>TEACstmrProfile__All1</fullName>
        <columns>NAME</columns>
        <columns>TEACstmrProfile__Business_Unit__c</columns>
        <columns>TEACstmrProfile__Plan_Year__c</columns>
        <columns>TEACstmrProfile__Approval_Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>BU Plan ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Industry/BU Overviews</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>TEACstmrProfile__Business_Unit_Required</fullName>
        <active>true</active>
        <description>Business Unit is Required</description>
        <errorConditionFormula>ISPICKVAL( TEACstmrProfile__Business_Unit__c , &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>TEACstmrProfile__Business_Unit__c</errorDisplayField>
        <errorMessage>Business Unit is Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TEACstmrProfile__Forecast_Outlook_Validation</fullName>
        <active>true</active>
        <description>Forecast Outlook is Required</description>
        <errorConditionFormula>ISBLANK( TEACstmrProfile__Forecast_Assumptions__c )</errorConditionFormula>
        <errorDisplayField>TEACstmrProfile__Forecast_Assumptions__c</errorDisplayField>
        <errorMessage>Please enter value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TEACstmrProfile__Industry_Summary_Validation</fullName>
        <active>true</active>
        <description>Industry Summary is Required</description>
        <errorConditionFormula>ISBLANK( TEACstmrProfile__Industry_Summary__c )</errorConditionFormula>
        <errorDisplayField>TEACstmrProfile__Industry_Summary__c</errorDisplayField>
        <errorMessage>Please enter value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TEACstmrProfile__Market_Trends_Validation_Rule</fullName>
        <active>true</active>
        <description>Market Trends is Required</description>
        <errorConditionFormula>ISBLANK( TEACstmrProfile__Market_Trends__c )</errorConditionFormula>
        <errorDisplayField>TEACstmrProfile__Market_Trends__c</errorDisplayField>
        <errorMessage>Please enter value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TEACstmrProfile__Plan_Year_is_Required</fullName>
        <active>true</active>
        <description>Plan Year Validation</description>
        <errorConditionFormula>ISPICKVAL( TEACstmrProfile__Plan_Year__c , &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>TEACstmrProfile__Plan_Year__c</errorDisplayField>
        <errorMessage>Plan Year is required</errorMessage>
    </validationRules>
</CustomObject>